# redrawing

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  setup.cfg
.tours/: introduo-bsica.tour
examples/: test_blazepose.py  test_depth.py  test_hand.py  test_hand_body.py  test_imu.py  test_java.py  test_substage.py
src/: calibra_oak.py  test_blazepose.py  test_data.py  test_depth - Copia.py  test_depth.py  test_hand.py  test_hand_body.py  test_imu.py  test_java.py  test_oak_pose _multiprocess.py  test_oak_pose.py  test_pose.py  test_substage.py  teste_user_data.py
src/redrawing/: test_client.py
src/redrawing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/redrawing/ai_models/: LightweightOpenPose.py  OAK_blazepose.py  OAK_hand_pose.py  OAK_human_pose.py  __init__.py
src/redrawing/ai_models/third_models/lightweight_human/: image_tools.py
src/redrawing/ai_models/third_models/oak_blazepose/: BlazeposeDepthai.py
src/redrawing/ai_models/third_models/oak_hand_tracker/: HandTracker.py  LICENSE
src/redrawing/communication/: __init__.py  java.py  udp.py
src/redrawing/components/: __init__.py  android.py  debug.py  er_ukf_imu.py  hand_gesture.py  oak.py  oak_constants.py  oak_model.py  oak_substage.py  openpose_light.py  pc_viewer.py  pipeline.py  record_play.py  stage.py  user.py
src/redrawing/components/er_ukf_imu_modules/: attitude_computation.py  er_ukf_imu.py  error_compensation.py  measurement_handler.py  ukf.py
src/redrawing/data_interfaces/: __init__.py  bodypose.py  data_class.py  depth_map.py  frame.py  gesture.py  image.py  imu.py  java.py  object_detection.py
src/redrawing/third_models/: openpose_light.py
src/redrawing/third_models/lightweight_human_modules/models/: with_mobilenet.py
src/redrawing/third_models/oak_models/: BlazeposeDepthai.py  blazepose.py  hand_pose.py  human_pose.py
