[metadata]
name = redrawing
version = 1.0.3
author = ReDrawing Campinas
author_email = redrawing.campinas@cti.gov.br
description = Python package provinding tools for artistic interactive applications using AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReDrawing/redrawing
project_urls =
    Bug Tracker = https://github.com/ReDrawing/redrawing/issues
    Documentation = https://redrawing.github.io/docs/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Artistic Software
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License

license_files = LICENSE.md
license = MIT License
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    opencv-python
    depthai >= 2.9.0
    open3d

[options.extras_require]
LightweightOpenPose = torch

[options.packages.find]
where = src